--- a/wiki-fe/src/app/_styles/header.css
+++ b/wiki-fe/src/app/_styles/header.css
@@ -19,6 +19,10 @@
     color: white;
 }
 
+.wiki-title-link {
+    text-decoration: none; 
+}
+
 .wiki-title-link:hover {
     text-decoration: none; 
 }
