--- a/encyclopedia/templates/encyclopedia/entry.html
+++ b/encyclopedia/templates/encyclopedia/entry.html
@@ -1,24 +1,13 @@
-{% extends "encyclopedia/layout.html" %}
-{% load filter %}
-
-{% block title %}
-    {{ entryName|replaceHyphensWithSpaces }}
-{% endblock %}
-
-{% block body %}
-    {% comment %} This is were the contents of an entry are displayed to the
-                  user if it exists, with the "safe" operator being unsolved
-                  to render the markdown content that is being converted to
-                  HTML in the python code {% endcomment %}
-    {% if entryExists %}
-        {{ entry|replaceHyphensWithSpaces|safe }}
-
-        <a href="{% url 'encyclopedia:edit' entryName %}">Edit Entry</a>
-    {% else %}
-        <h1 class="errorMessage">Requested page not found!</h1>
-    {% endif %}
-
-    
-{% endblock %}
-
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{{ article.title }}</title>
+</head>
+<body>
+    <h1>{{ article.title }}</h1>
+    <p>{{ article.text }}</p>
+    <a href="{% url 'encyclopedia:index' %}">Voltar para a página inicial</a>
+</body>
+</html>
