--- a/encyclopedia/templates/encyclopedia/index.html
+++ b/encyclopedia/templates/encyclopedia/index.html
@@ -1,29 +1,15 @@
-{% extends "encyclopedia/layout.html" %}
-{% load filter %}
-
-{% block title %}
-    Encyclopedia
-{% endblock %}
-
-{% block body %}
-    {% comment %} This "if" is used in a way to give a dual purpose to this page,
-                  meaning that it is used to display all the entries present in the
-                  wiki, or, if the user search for something that is similar to an
-                  already existing entry, only those matching resulsts are going to
-                  be shown 
-    {% endcomment %}
-    {% if searchResult %}
-        <h1>Search Results</h1>
-    {% else %}
-        <h1>All Pages</h1>
-    {% endif %}
-    <div>
-        <ul id="entries">
-            {% comment %} "entries" has the title of all the entries in the wiki {% endcomment %}
-            {% for entryvar in entries %}
-                <li><a href="{% url 'encyclopedia:entry' entryvar %}">{{ entryvar|replaceHyphensWithSpaces }}</a></li>
-            {% endfor %}
-        </ul>
-    </div>
-
-{% endblock %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Enciclopédia - Página Inicial</title>
+</head>
+<body>
+    <h1>Bem-vindo à Enciclopédia</h1>
+    <p>Esta é a página inicial da sua enciclopédia.</p>
+    <a href="{% url 'encyclopedia:newPage' %}">Criar nova página</a>
+    <a href="{% url 'encyclopedia:list_user' %}">Listar Usuários</a>
+    <!-- Adicione links conforme sua necessidade -->
+</body>
+</html>
