added error handling

--- a/wiki-fe/src/app/_styles/sign-up.css
+++ b/wiki-fe/src/app/_styles/sign-up.css
@@ -8,6 +8,7 @@
     padding: 20px;
     border-radius: 8px; 
     border: 1px solid white;  
+    /* opacity: 10%; */
     background-color: rgba(136, 195, 255, 0.4);
   }
   
