Implementation of the users' terms box

--- a/wiki-fe/src/app/_styles/sign-up.css
+++ b/wiki-fe/src/app/_styles/sign-up.css
@@ -64,3 +64,13 @@
   .terms-container input[type="checkbox"] {
     margin-right: 0.5rem;
   }
+
+  .terms-link{
+    color: #000000;
+    text-decoration: none;
+  }
+
+  .terms-link:hover{
+    text-decoration: underline;
+    cursor: pointer;
+  }
