--- a/wiki-fe/src/app/_styles/login.css
+++ b/wiki-fe/src/app/_styles/login.css
@@ -1,4 +1,4 @@
-.signup-container {
+.login-container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -19,22 +19,22 @@
     justify-content: center;
   }
 
-  .signup-container h2 {
+  .login-container h2 {
     margin-bottom: 20px;
   }
   
-  .signup-container form div {
+  .login-container form div {
     margin-bottom: 10px;
   }
   
-  .signup-container label {
+  .login-container label {
     display: block;
     text-align: center;
     margin-bottom: 5px;
   }
   
-  .signup-container input[type="password"],
-  .signup-container input[type="email"] {
+  .login-container input[type="password"],
+  .login-container input[type="email"] {
     width: 100%;
     padding: 8px;
     border: 1px solid #000000;
@@ -42,7 +42,7 @@
     box-sizing: border-box;
   }
   
-  .signup-container button[type="submit"] {
+  .login-container button[type="submit"] {
     background-color: #182833; 
     color: white;
     padding: 10px 15px;
@@ -51,6 +51,6 @@
     cursor: pointer;
   }
 
-  .signup-container button:hover {
+  .login-container button:hover {
     background-color: #1F4762;
   }
