--- a/wiki-fe/src/app/_styles/layout/body.css
+++ b/wiki-fe/src/app/_styles/layout/body.css
@@ -4,6 +4,7 @@
     justify-content: center;
     margin-top: 20px;
     padding-left: 20px;
+    justify-content: space-between;    
 }
 
 .sidebar {
