--- a/wiki-fe/src/app/_styles/profile/profile-info.css
+++ b/wiki-fe/src/app/_styles/profile/profile-info.css
@@ -1,5 +1,8 @@
 .profile-container {
+    display: flex;
+    flex-direction: row;
     padding: 20px;
+    gap: 20%;
     border-radius: 8px;
     margin-left: 20px;
     margin-right: 20px;
@@ -25,10 +28,23 @@
     cursor: pointer;
   }
 
+  .account-information-container {
+    width: auto;
+  }
+  
   .data-container {
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: space-between;
+    font-size: 20px;
+    gap: 10px;
+  }
+
+  .password-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
     justify-content: flex-start;
     font-size: 20px;
     gap: 10px;
