--- a/wiki-fe/src/app/_styles/profile/users.css
+++ b/wiki-fe/src/app/_styles/profile/users.css
@@ -22,4 +22,19 @@
   .user-table tr:nth-child(odd) {
     background-color: #ffffff;
   }
+
+  .users-container {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    gap: 20%;
+    border-radius: 8px;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    border: 1px solid black;
+    background-color: white;
+    opacity: 0.7;
+    width: 80%;
+}
   
