--- a/wiki-fe/src/app/_styles/auth/errorMessage.css
+++ b/wiki-fe/src/app/_styles/auth/errorMessage.css
@@ -1,5 +1,5 @@
 .error-message {
-    text-align: center;
+    text-align: left;
     color: rgb(224, 0, 0);
     font-weight: bold;
     font-size: 20px;
