--- a/wiki-fe/src/app/_styles/wiki/new-article.css
+++ b/wiki-fe/src/app/_styles/wiki/new-article.css
@@ -26,7 +26,8 @@
     border: 1px solid #000000;
     border-radius: 15px;
     height: 500px;
-    font-size: 16px;
+    padding: 10px;
+    font-size: 18px;
     resize: none;  
     outline: none; 
     font-family: 'Times New Roman';
@@ -50,8 +51,9 @@
     border: 1px solid #000000;
     border-radius: 15px;
     height: 15%;
+    padding: 10px;
     align-content: center;
-    font-size: 20px;
+    font-size: 25px;
     resize: none;
     outline: none; 
     font-family: 'Times New Roman'
