--- a/wiki-fe/src/app/_styles/wiki/new-article.css
+++ b/wiki-fe/src/app/_styles/wiki/new-article.css
@@ -76,7 +76,6 @@
 }
 
 .title-container {
-
     display: flex;   
     flex-direction: column;       
     align-items: center;
@@ -90,7 +89,7 @@
     width: 80%; 
     border: 1px solid #000000;
     border-radius: 15px;
-    height: 15%;
+    height: 30px;        
     padding: 10px;
     align-content: center;
     font-size: 25px;
