--- a/wiki-fe/src/app/_styles/info/edit-info.css
+++ b/wiki-fe/src/app/_styles/info/edit-info.css
@@ -6,14 +6,14 @@
     height: 20px;
   }
 
-.edit-info-container h2 {
+.create-article-container h2 {
     margin-bottom: 20px;
     font-size: 25px;
     color: black;
     font-weight: normal;
   }
 
-.edit-info-container {
+.create-article-container {
     padding: 20px;
     border-radius: 8px;
     margin-right: 100px;
