--- a/wiki-fe/src/app/_styles/info/info.css
+++ b/wiki-fe/src/app/_styles/info/info.css
@@ -10,3 +10,32 @@
     opacity: 0.7;
     width: 80%;
 }
+
+.edit-info{
+    margin-right: 15px;
+
+    width: 100px;
+    padding: 10px;
+    background-color: white;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    text-decoration: none;
+    color: white;
+}
+
+.edit-info h2 {
+    font-size: 14px;
+    font-weight: bold;
+    color: rgb(0, 0, 0);
+}
+
+.edit-info:hover {
+    background-color: rgb(226, 226, 226);
+    cursor: pointer;
+}
+
+  .info-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
